# openeo-flood-mapper-local

./: .gitignore  .gitlab-ci.yml  .nojekyll  1_yeoda_dc.html  AUTHORS.md  CHANGELOG.rst  CODEOWNERS  COPYRIGHT  LICENSE  Makefile  README.md  _quarto.yml  index.html  index.qmd  pytest.ini  search.json  setup.cfg
.github/workflows/: publish.yml
notebooks/: 0_tutorial_local_proc.ipynb  1_yeoda_dc.html  1_yeoda_dc.ipynb  1_yeoda_dc.qmd  2_eodc_dc.html  2_eodc_dc.ipynb  2_eodc_dc.qmd  _quarto.yml  index.qmd  intertwin.bib  load_eodc_data.py  references.html
notebooks/assets/styles/: scroll.css
notebooks/data/: thessaly_floodmap.nc  thessaly_floodmap_plia.nc  thessaly_floodmap_plia_distr.nc  thessaly_floodmap_plia_distr_out.nc  thessaly_floodmap_plia_distr_out_den.nc
notebooks/data/watter_backscatter/: example.nc
notebooks/openEO_local/s1_parameters/S1_CSAR_IWGRDH/PLIA-TAG/V01R03/EQUI7_EU020M/E054N006T3/: PLIA-TAG-MEAN_20200101T000000_20201231T235959__D080_E054N006T3_EU020M_V01R03_S1IWGRDH.nc
notebooks/openEO_local/s1_parameters/S1_CSAR_IWGRDH/SIG0/V1M1R1/EQUI7_EU020M/E054N006T3/: SIG0_20180228T043908__VV_D080_E054N006T3_EU020M_V1M1R1_S1AIWGRDH_TUWIEN.nc
notebooks/openEO_local/tuw_s1_harpar/S1_CSAR_IWGRDH/SIG0-HPAR/V0M2R3/EQUI7_EU020M/E054N006T3/: D080.nc
site_libs/bootstrap/: bootstrap.min.css
src/openeo_flood_mapper_local/: __init__.py  restructure_hparam.py  restructure_plia.py  restructure_sig0.py  view_flood_map.py
