[metadata]
name = openeo_flood_mapper_local
version = attr: openeo_flood_mapper_local.__version__
description = openEO flood mapping graph using local processing
author = TU Wien GEO MRS group
author_email = remote.sensing@geo.tuwien.ac.at
long_description = file: README.md
url = https://git.eodc.eu/tuwien/openeo-flood-mapper-local
platforms = any
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
install_requires =
    openeo[localprocessing]
    openeo
    eotransform-pandas
    geopathfinder
    jupyter

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
tutorial =
    netcdf4
    matplotlib
